tests/baselines/reference/derivedTypeCallingBaseImplWithOptionalParams.errors.txt
derivedTypeCallingBaseImplWithOptionalParams.ts(13,3): error TS2554: Expected 1 arguments, but got 0.


==== derivedTypeCallingBaseImplWithOptionalParams.ts (1 errors) ====
    interface MyInterface {
        myMethod(...myList: any[]);
    }
    class MyClass implements MyInterface {
        myMethod(myList: any[]) { // valid
        }
    }
    
    var x: MyInterface = new MyClass();
    x.myMethod(); // should be valid, but MyClass has no implementation to handle it.
    
    var y: MyClass = new MyClass();
    y.myMethod(); // error
      ~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 0.
!!! related TS6210 derivedTypeCallingBaseImplWithOptionalParams.ts:5:14: An argument for 'myList' was not provided.